fix: fixed layout issue within the features item container

--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -93,7 +93,7 @@
   align-items: center;
   text-align: center;
   gap: 1em;
-  padding: 2.5em 1.5em;
+  padding: 1em;
   width: 17em;
   height: 24em;
   border-radius: var(--border-px);
